[gd_scene load_steps=11 format=3 uid="uid://y18rsxg61d6q"]

[ext_resource type="Texture2D" uid="uid://bc5en4wffqg13" path="res://Art/UI/Shop/shop_popup_box.png" id="1_4udjd"]
[ext_resource type="Script" path="res://Scripts/shop_root_node.gd" id="1_ck5xk"]
[ext_resource type="Texture2D" uid="uid://d3tp7opbgnwwa" path="res://Art/Backgrounds/NightDay_NOcircle.png" id="2_m8p3w"]
[ext_resource type="Texture2D" uid="uid://dxy1s0mue6k36" path="res://Art/UI/item_box.png" id="2_tm3cq"]
[ext_resource type="PackedScene" uid="uid://bad2tw5yj2w01" path="res://Prefabs/ui.tscn" id="3_5jkal"]
[ext_resource type="Texture2D" uid="uid://ychd7v4mssvv" path="res://Art/Nets/Open Brown.png" id="3_m3qa6"]
[ext_resource type="Texture2D" uid="uid://fc0vlclp8ve1" path="res://Art/UI/exit_menu_button.png" id="4_4e2m5"]
[ext_resource type="Texture2D" uid="uid://cgoqhiiyxeaus" path="res://Art/price_box.png" id="4_hyolf"]
[ext_resource type="FontFile" uid="uid://by0cbqtih6ynd" path="res://Art/UI/DynaPuff-VariableFont_wdth,wght.ttf" id="6_1o4e1"]
[ext_resource type="Texture2D" uid="uid://6spu3itou7ew" path="res://Art/UI/Coins/coin_silver.png" id="8_aujb7"]

[node name="ShopRootNode" type="Node2D"]
script = ExtResource("1_ck5xk")

[node name="PufferpopBg" type="Sprite2D" parent="."]
position = Vector2(-1676, -1073)
texture = ExtResource("2_m8p3w")
centered = false

[node name="Button" type="Button" parent="."]
offset_left = 106.0
offset_top = 57.0
offset_right = 314.0
offset_bottom = 285.0
icon = ExtResource("4_4e2m5")
flat = true

[node name="UI" parent="." instance=ExtResource("3_5jkal")]

[node name="ShopPopupBox" type="Sprite2D" parent="."]
position = Vector2(1280, 720)
texture = ExtResource("1_4udjd")

[node name="Item1" type="Sprite2D" parent="."]
position = Vector2(753, 707)
texture = ExtResource("2_tm3cq")

[node name="OpenBrown" type="Button" parent="Item1"]
offset_left = -206.0
offset_top = -167.0
offset_right = 494.0
offset_bottom = 383.0
scale = Vector2(0.6, 0.6)
icon = ExtResource("3_m3qa6")
flat = true
icon_alignment = 1

[node name="Label2" type="Label" parent="Item1"]
offset_left = -33.0
offset_top = 69.0
offset_right = 51.0
offset_bottom = 171.0
theme_override_fonts/font = ExtResource("6_1o4e1")
theme_override_font_sizes/font_size = 84
text = "x1"

[node name="PriceBox" type="Sprite2D" parent="Item1"]
position = Vector2(0, 275)
texture = ExtResource("4_hyolf")

[node name="CoinSilver" type="Sprite2D" parent="Item1/PriceBox"]
position = Vector2(-22, 0)
scale = Vector2(0.075, 0.075)
texture = ExtResource("8_aujb7")

[node name="Label" type="Label" parent="Item1/PriceBox"]
offset_left = 17.0
offset_top = -31.0
offset_right = 73.0
offset_bottom = 28.0
theme_override_fonts/font = ExtResource("6_1o4e1")
theme_override_font_sizes/font_size = 48
text = "x2"

[node name="Item2" type="Sprite2D" parent="."]
position = Vector2(1280, 707)
texture = ExtResource("2_tm3cq")

[node name="PriceBox" type="Sprite2D" parent="Item2"]
position = Vector2(0, 275)
texture = ExtResource("4_hyolf")

[node name="CoinSilver2" type="Sprite2D" parent="Item2/PriceBox"]
position = Vector2(-35.1, 0)
scale = Vector2(0.075, 0.075)
texture = ExtResource("8_aujb7")

[node name="Label2" type="Label" parent="Item2/PriceBox"]
offset_left = 3.90002
offset_top = -31.0
offset_right = 59.9
offset_bottom = 28.0
theme_override_fonts/font = ExtResource("6_1o4e1")
theme_override_font_sizes/font_size = 48
text = "x15"

[node name="OpenBrown2" type="Button" parent="Item2"]
offset_left = -209.0
offset_top = -167.0
offset_right = 491.0
offset_bottom = 383.0
scale = Vector2(0.6, 0.6)
icon = ExtResource("3_m3qa6")
flat = true
icon_alignment = 1

[node name="Label3" type="Label" parent="Item2"]
offset_left = -68.0
offset_top = 71.0
offset_right = 72.0
offset_bottom = 173.0
theme_override_fonts/font = ExtResource("6_1o4e1")
theme_override_font_sizes/font_size = 84
text = "x10"

[node name="Item3" type="Sprite2D" parent="."]
position = Vector2(1806, 707)
texture = ExtResource("2_tm3cq")

[node name="PriceBox" type="Sprite2D" parent="Item3"]
position = Vector2(0, 275)
texture = ExtResource("4_hyolf")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Item1/OpenBrown" to="." method="_on_open_brown_pressed"]
[connection signal="pressed" from="Item2/OpenBrown2" to="." method="_on_open_brown_2_pressed"]
